# kjrocker.github.io

./: .eleventy.js  .gitignore  404.html  CNAME  README.md  about.markdown  astro.config.mjs  cabal.project.local  devbox.json  homepage.cabal  index.html  netlify.toml  package-lock.json  package.json  pnpm-lock.yaml  site.hs  styles.css  tailwind.config.js  tailwind.config.mjs  watch.sh
.github/workflow/: deploy.yml
.github/workflows/: build.yml  deploy.yml  publish.yml
_cache/: -3292297720860177651  -3483154052854966999  -3667594044612465272  -4794663223398124407  -5152796895696119073  -5185344883098693007  -5959654945405810907  -6248701184966557147  -7328970764744673369  -8244006296017693504  -8664493989729666441  3648203302398836940  4629712498314643247  5250470449129180733  5493635937461857531  79368001687304719
_eleventy_old/: .eleventy.js  .gitignore  package-lock.json  tailwind.config.js
_eleventy_old/src/: about.njk  blog.njk  index.njk
_site/: about.html  archive.html  contact.html  index.html
_site/css/: default.css
_site/posts/: 2015-08-12-spqr.html  2015-10-07-rosa-rosa-rosam.html  (+2 more)
css/: default.css  espresso.css  input.css  style.css  tango.css
posts/: 2015-08-12-spqr.markdown  2023-10-12-intro-gin-indexes.markdown  2023-10-12-postgres-generalized-inverted-indexes.markdown  2023-11-01-postgres-string-trigrams.markdown
src/: _redirects  about.njk  blog.njk  content.config.ts  index.njk  robots.njk  sitemap.njk
src/_includes/: nav.njk  (+3 more)
templates/: all.css  archive.html  default.html  post-list.html  post-teaser.html  post.html  static.html
(+34 files in other folders)
